--- a/midterm/midterm_aman.ipynb
+++ b/midterm/midterm_aman.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: right\"> Mladen Kolar </div>\n",
+    "\n",
+    "<left>Machine Learning</left> \n",
+    "<br>\n",
+    "<left>Winter 2023</left>\n",
+    "\n",
+    "<h2><center> Midterms </center></h2>\n",
+    "\n",
+    "<center>Due on Sunday, Feb 19</center>\n",
+    "\n",
+    "<h3><span style=\"color:#318ce7\">Solution - Aman Krishna</span></h3>\n",
+    "\n",
+    "<h3><span style=\"color:#318ce7\">Email - amank@uchicago.edu</span></h3>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -418,6 +447,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.3 Create lift curves for these four models. What is the lift for the top 10% of observations in the validation set?"
    ]
   },
@@ -517,6 +554,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -555,6 +600,14 @@
     ">The Random Forest model has the highest lift for the top 10% of the validation set, with a lift of approximately 1.7. The Decision Tree model has the lowest lift for the top 10% of the validation set, with a lift of approximately 1.6.\n",
     ">\n",
     ">This is as expected since we got the highest accuracy for the Random Forest model, and the lowest accuracy for the Decision Tree model in our previous question."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -625,6 +678,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.4 Briefly describe how boosted tree, bagged tree and random forest models are conceptually similar and how are they conceptually different."
    ]
   },
@@ -649,6 +710,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **2 Question [32 points]**"
    ]
   },
@@ -663,6 +733,14 @@
    "source": [
     "### 2.1 The following plot is the solution path for a Lasso estimate. The two dashed lines correspond to two values of the tuning parameter λ, and hence two models.\n",
     "![image.png](attachment:image.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -701,6 +779,14 @@
    "source": [
     "#### d. Model I has a larger test error than Model II.\n",
     ">**FALSE** It is not possible to determine whether Model I has a larger test error than Model II, as we do not have access to the test error for either model. We can only compare the in-sample RSS for each model, which is what we did in the previous question."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -758,6 +844,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2.3 Do the following action increases the bias of the model?"
    ]
   },
@@ -795,6 +889,14 @@
    "source": [
     "#### d. Increase B, the number of trees in a random forest model.\n",
     ">**FALSE** As B increases in the random forest model we get a more complex model which has a lower bias."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -839,7 +941,7 @@
    "metadata": {},
    "source": [
     "#### c. With two splits, the RSS is smaller than 1.\n",
-    ">**FALSE** With two splits, the RSS is 1.25 (as caculate below). This is as expected as there is no value of age that can perfectly predict the height of a person."
+    ">**TRUE** With two splits, the RSS is 1.25/2 (as caculate below). Thus it is smaller than 1."
    ]
   },
   {
@@ -913,6 +1015,15 @@
     "plt.figure(figsize=(8, 6))\n",
     "plot_tree(model, feature_names=['Gender', 'Age'], filled=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---"
    ]
   },
   {
@@ -1410,6 +1521,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### b) Partition the data into 60% train and 40% validation set."
    ]
   },
@@ -1425,6 +1544,14 @@
     "data_dummies = pd.get_dummies(data)\n",
     "data_dummies.drop('offer_No Offer', axis=1, inplace=True)\n",
     "X_training, X_test,y_training,  y_test = train_test_split(data_dummies.drop(target, axis=1), data_dummies[target],test_size=0.4, random_state=420)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -2057,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -2118,44 +2245,97 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63314</th>\n",
-       "      <td>0.090</td>\n",
+       "      <th>5655</th>\n",
+       "      <td>0.165</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13802</th>\n",
-       "      <td>0.090</td>\n",
+       "      <th>17480</th>\n",
+       "      <td>0.165</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48808</th>\n",
-       "      <td>0.087</td>\n",
+       "      <th>2120</th>\n",
+       "      <td>0.165</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4579</th>\n",
-       "      <td>0.083</td>\n",
+       "      <th>35094</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54040</th>\n",
+       "      <td>0.165</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13265</th>\n",
-       "      <td>0.082</td>\n",
+       "      <th>27034</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48492</th>\n",
+       "      <td>0.165</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31753</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28393</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52913</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1734</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44743</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42040</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25952</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22488</th>\n",
+       "      <td>0.165</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>17046 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2165,23 +2345,52 @@
        "28204   0.165           0               1\n",
        "57225   0.165           0               1\n",
        "26631   0.165           0               1\n",
-       "...       ...         ...             ...\n",
-       "63314   0.090           0               1\n",
-       "13802   0.090           0               0\n",
-       "48808   0.087           0               0\n",
-       "4579    0.083           0               0\n",
-       "13265   0.082           0               0\n",
-       "\n",
-       "[17046 rows x 3 columns]"
+       "5655    0.165           0               1\n",
+       "17480   0.165           0               0\n",
+       "2120    0.165           0               0\n",
+       "35094   0.165           0               1\n",
+       "54040   0.165           0               0\n",
+       "27034   0.165           1               0\n",
+       "48492   0.165           0               0\n",
+       "31753   0.165           1               1\n",
+       "28393   0.165           0               1\n",
+       "52913   0.165           0               0\n",
+       "1734    0.165           0               1\n",
+       "44743   0.165           0               1\n",
+       "42040   0.165           0               1\n",
+       "25952   0.165           0               0\n",
+       "22488   0.165           1               1"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "uplift_df"
+    "uplift_df.head(20)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> We see that targeting customers with an offer using training targets with our logistic regression model, we get an uplift in the number of conversions. <br>\n",
+    ">\n",
+    "> Though the predictive power is on the lower side using our logistic regression model, we get aroun 46 customer uplift compared to random targeting on the top 25% of the customers. <br>\n",
+    ">\n",
+    "> We know that by default the logistic regression model predicts the '0's, thus the confusion matrix presented above is flipped as for us the relevant metric to predit is a +1 conversion. <br>\n",
+    ">"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---"
    ]
   }
  ],
